<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <Button android:id="@+id/view_progress_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/view_progress_button_text"/>
    
    <Button android:id="@+id/options_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/options_button_text"/>
    
    <Button android:id="@+id/play_game_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/play_game_button_text"/>

</LinearLayout>
